--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "@anthropic-ai/vertex-sdk": "^0.7.0",
     "@commander-js/extra-typings": "^13.1.0",
+    "@fission-ai/openspec": "file:../OpenSpec",
     "@inkjs/ui": "^2.0.0",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@types/lodash-es": "^4.17.12",
